--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,5 +14,5 @@
       {{ content }}
     </main>
     <footer>
-      <p>{{ site.time | date: "%Y" }} {{ site.title }}. Powered by <a href="https://jekyllrb.com/">Jekyll</a>.</p>
+      <p>{{ site.time | date: "%Y-%m-%d" }} Made by e^pi*i + 1 = 0. Powered by <a href="https://jekyllrb.com/">Jekyll</a>.</p>
     </footer>
